[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-bitcoin-risk-model"
version = "1.0.0rc2"
description = "Evidence-first Bitcoin market risk research and decision-support application."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Open Bitcoin Risk Model contributors" }]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<4",
  "plotly>=5.20,<7",
  "pyarrow>=15,<25",
  "requests>=2.31,<3",
  "scipy>=1.11,<2",
  "streamlit>=1.35,<2",
  "yfinance>=0.2.40,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.6,<1",
]

[project.scripts]
obrm = "obrm.core.app:run"
obrm-release-check = "obrm.release.readiness:main"

[tool.setuptools.packages.find]
include = ["obrm*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", ".venv", "build", "dist"]
